[gd_scene load_steps=7 format=3 uid="uid://bamw0sls8psxy"]

[ext_resource type="Script" path="res://objects/minimap/minimap.gd" id="1_htipk"]
[ext_resource type="Texture2D" uid="uid://b83bfu4ajg2qm" path="res://resources/assets/ships/1.png" id="3_ukfgn"]
[ext_resource type="Texture2D" uid="uid://cyk3ndrqlkdk3" path="res://resources/assets/ships/2.png" id="4_48ctq"]
[ext_resource type="Texture2D" uid="uid://do5cirxbaysib" path="res://resources/assets/ships/tintin_rocket.png" id="5_5prq6"]
[ext_resource type="Texture2D" uid="uid://0all4ke4lmpb" path="res://resources/assets/ships/3.png" id="6_4fnem"]
[ext_resource type="Script" path="res://objects/minimap/minimap_overtake.gd" id="7_uda4p"]

[node name="Minimap" type="Node2D"]
script = ExtResource("1_htipk")

[node name="DisplayOpponents" type="CanvasLayer" parent="."]

[node name="StartLine" type="Marker2D" parent="DisplayOpponents"]
position = Vector2(40, 904)

[node name="FinishLineLabel" type="RichTextLabel" parent="DisplayOpponents"]
z_index = 10
offset_left = 32.0
offset_top = 16.0
offset_right = 126.0
offset_bottom = 46.0
scale = Vector2(2.78, 2.78)
text = "Finish Line"

[node name="StartLineLabel" type="RichTextLabel" parent="DisplayOpponents"]
z_index = 10
offset_left = 16.0
offset_top = 901.0
offset_right = 145.0
offset_bottom = 931.0
scale = Vector2(2.78, 2.78)
text = "Starting point"

[node name="SpriteAdversaire1" type="Sprite2D" parent="DisplayOpponents"]
position = Vector2(128, 880)
scale = Vector2(0.656863, 0.656863)
texture = ExtResource("3_ukfgn")

[node name="SpriteAdversaire2" type="Sprite2D" parent="DisplayOpponents"]
position = Vector2(80, 880)
texture = ExtResource("4_48ctq")

[node name="SpritePlayer" type="Sprite2D" parent="DisplayOpponents"]
position = Vector2(240, 880)
scale = Vector2(0.65625, 0.65625)
texture = ExtResource("5_5prq6")

[node name="FinishLine" type="Marker2D" parent="DisplayOpponents"]
position = Vector2(48, 96)

[node name="SpriteAdversaire3" type="Sprite2D" parent="DisplayOpponents"]
position = Vector2(176, 880)
scale = Vector2(0.847826, 0.855556)
texture = ExtResource("6_4fnem")

[node name="OvertakeScript" type="Node" parent="."]
script = ExtResource("7_uda4p")
